parser.out
Created by PLY version 3.11 (http://www.dabeaz.com/ply)

Unused terminals:

    RESIDUO

Grammar

Rule 0     S' -> programa
Rule 1     programa -> REGLA_PROGRAMA ID DOSPUNTOS REGLA_MAIN bloque REGLA_END
Rule 2     programa -> REGLA_PROGRAMA ID DOSPUNTOS vars REGLA_MAIN bloque REGLA_END
Rule 3     programa -> REGLA_PROGRAMA ID DOSPUNTOS programa_modulos_aux REGLA_MAIN bloque REGLA_END
Rule 4     programa -> REGLA_PROGRAMA ID DOSPUNTOS vars programa_modulos_aux REGLA_MAIN bloque REGLA_END
Rule 5     programa_modulos_aux -> modulos
Rule 6     programa_modulos_aux -> modulos programa_modulos_aux
Rule 7     modulos -> REGLA_FUNCION tipo_func ID ABREPAR modulos_aux CIERRAPAR vars bloque
Rule 8     modulos -> REGLA_FUNCION REGLA_VOID ID ABREPAR modulos_aux CIERRAPAR vars bloque
Rule 9     modulos_aux -> tipo ID
Rule 10    modulos_aux -> tipo ID COMA modulos_aux
Rule 11    vars -> REGLA_VAR declaracionVar
Rule 12    vars -> REGLA_VAR declaracionVar vars
Rule 13    tipo -> REGLA_INT
Rule 14    tipo -> REGLA_FLOAT
Rule 15    tipo -> REGLA_CHAR
Rule 16    tipo -> REGLA_DATASET
Rule 17    tipo -> REGLA_BOOL
Rule 18    tipo_func -> REGLA_INT
Rule 19    tipo_func -> REGLA_FLOAT
Rule 20    tipo_func -> REGLA_CHAR
Rule 21    tipo_func -> REGLA_BOOL
Rule 22    expresion -> exp MAYORQUE exp
Rule 23    expresion -> exp MENORQUE exp
Rule 24    expresion -> exp MAYORQUEIGUAL exp
Rule 25    expresion -> exp MENORQUEIGUAL exp
Rule 26    expresion -> exp IGUALIGUAL exp
Rule 27    expresion -> exp DIFDE exp
Rule 28    expresion -> exp
Rule 29    logical_expresion -> REGLA_NOT expresion
Rule 30    logical_expresion -> expresion REGLA_AND expresion
Rule 31    logical_expresion -> expresion REGLA_OR expresion
Rule 32    logical_expresion -> expresion
Rule 33    estatuto -> llamada_funcion
Rule 34    estatuto -> asignacion
Rule 35    estatuto -> condicion
Rule 36    estatuto -> escritura
Rule 37    estatuto -> ciclo
Rule 38    estatuto -> func_pred
Rule 39    estatuto -> lectura
Rule 40    llamada_funcion -> ID ABREPAR llamada_funcion_aux CIERRAPAR PUNTOYCOMA
Rule 41    llamada_funcion_aux -> exp
Rule 42    llamada_funcion_aux -> exp COMA llamada_funcion_aux
Rule 43    escritura -> REGLA_PRINT ABREPAR escritura_aux CIERRAPAR PUNTOYCOMA
Rule 44    escritura_aux -> expresion
Rule 45    escritura_aux -> expresion COMA escritura_aux
Rule 46    condicion -> REGLA_IF ABREPAR logical_expresion CIERRAPAR bloque PUNTOYCOMA
Rule 47    condicion -> REGLA_IF ABREPAR logical_expresion CIERRAPAR bloque REGLA_ELSE bloque PUNTOYCOMA
Rule 48    asignacion -> ID IGUAL logical_expresion PUNTOYCOMA
Rule 49    asignacion -> ID array IGUAL logical_expresion PUNTOYCOMA
Rule 50    ciclo -> REGLA_WHILE ABREPAR logical_expresion CIERRAPAR bloque PUNTOYCOMA
Rule 51    func_pred -> REGLA_AVERAGE ABREPAR ID COMA CTE_I CIERRAPAR
Rule 52    func_pred -> REGLA_MEDIAN ABREPAR ID COMA CTE_I CIERRAPAR
Rule 53    func_pred -> REGLA_MODE ABREPAR ID COMA CTE_I CIERRAPAR
Rule 54    func_pred -> REGLA_PLOT ABREPAR ID COMA CTE_CHAR COMA CTE_CHAR CIERRAPAR
Rule 55    func_pred -> REGLA_PIECHART ABREPAR ID CIERRAPAR
Rule 56    func_pred -> REGLA_VARIANZA ABREPAR ID COMA CTE_I CIERRAPAR
Rule 57    func_pred -> REGLA_DESV_T ABREPAR ID COMA CTE_I CIERRAPAR
Rule 58    func_pred -> REGLA_DIST_N ABREPAR ID COMA CTE_I CIERRAPAR
Rule 59    func_pred -> REGLA_BASIC_V_P ABREPAR ID COMA CTE_CHAR CIERRAPAR
Rule 60    lectura -> REGLA_READ ABREPAR ID CIERRAPAR PUNTOYCOMA
Rule 61    lectura -> REGLA_READ ABREPAR ID array CIERRAPAR PUNTOYCOMA
Rule 62    array -> ABREBRACK exp CIERRABRACK
Rule 63    array -> ABREBRACK exp CIERRABRACK ABREBRACK exp CIERRABRACK
Rule 64    declaracionVar -> var_id DOSPUNTOS tipo PUNTOYCOMA
Rule 65    declaracionVar -> ID ABREBRACK CTE_I CIERRABRACK DOSPUNTOS REGLA_INT PUNTOYCOMA
Rule 66    declaracionVar -> ID ABREBRACK CTE_I CIERRABRACK DOSPUNTOS REGLA_FLOAT PUNTOYCOMA
Rule 67    declaracionVar -> ID ABREBRACK CTE_I CIERRABRACK DOSPUNTOS REGLA_CHAR PUNTOYCOMA
Rule 68    declaracionVar -> ID ABREBRACK CTE_I CIERRABRACK ABREBRACK CTE_I CIERRABRACK DOSPUNTOS REGLA_INT PUNTOYCOMA
Rule 69    declaracionVar -> ID ABREBRACK CTE_I CIERRABRACK ABREBRACK CTE_I CIERRABRACK DOSPUNTOS REGLA_FLOAT PUNTOYCOMA
Rule 70    declaracionVar -> ID ABREBRACK CTE_I CIERRABRACK ABREBRACK CTE_I CIERRABRACK DOSPUNTOS REGLA_CHAR PUNTOYCOMA
Rule 71    var_id -> ID
Rule 72    var_id -> ID COMA var_id
Rule 73    var_cte -> ID
Rule 74    var_cte -> ID array
Rule 75    var_cte -> ID ABREPAR var_cte_aux CIERRAPAR
Rule 76    var_cte -> CTE_I
Rule 77    var_cte -> CTE_F
Rule 78    var_cte -> CTE_CHAR
Rule 79    var_cte -> CTE_BOOL
Rule 80    var_cte -> CTE_D
Rule 81    var_cte_aux -> exp
Rule 82    var_cte_aux -> exp COMA var_cte_aux
Rule 83    bloque -> ABRECOR estatuto_aux CIERRACOR
Rule 84    estatuto_aux -> estatuto
Rule 85    estatuto_aux -> estatuto estatuto_aux
Rule 86    exp -> termino
Rule 87    exp -> termino SUMA exp
Rule 88    exp -> termino RESTA exp
Rule 89    termino -> factor
Rule 90    termino -> factor MULTIPLICACION termino
Rule 91    termino -> factor DIVISION termino
Rule 92    factor -> ABREPAR logical_expresion CIERRAPAR
Rule 93    factor -> var_cte
Rule 94    factor -> SUMA var_cte
Rule 95    factor -> RESTA var_cte

Terminals, with rules where they appear

ABREBRACK            : 62 63 63 65 66 67 68 68 69 69 70 70
ABRECOR              : 83
ABREPAR              : 7 8 40 43 46 47 50 51 52 53 54 55 56 57 58 59 60 61 75 92
CIERRABRACK          : 62 63 63 65 66 67 68 68 69 69 70 70
CIERRACOR            : 83
CIERRAPAR            : 7 8 40 43 46 47 50 51 52 53 54 55 56 57 58 59 60 61 75 92
COMA                 : 10 42 45 51 52 53 54 54 56 57 58 59 72 82
CTE_BOOL             : 79
CTE_CHAR             : 54 54 59 78
CTE_D                : 80
CTE_F                : 77
CTE_I                : 51 52 53 56 57 58 65 66 67 68 68 69 69 70 70 76
DIFDE                : 27
DIVISION             : 91
DOSPUNTOS            : 1 2 3 4 64 65 66 67 68 69 70
ID                   : 1 2 3 4 7 8 9 10 40 48 49 51 52 53 54 55 56 57 58 59 60 61 65 66 67 68 69 70 71 72 73 74 75
IGUAL                : 48 49
IGUALIGUAL           : 26
MAYORQUE             : 22
MAYORQUEIGUAL        : 24
MENORQUE             : 23
MENORQUEIGUAL        : 25
MULTIPLICACION       : 90
PUNTOYCOMA           : 40 43 46 47 48 49 50 60 61 64 65 66 67 68 69 70
REGLA_AND            : 30
REGLA_AVERAGE        : 51
REGLA_BASIC_V_P      : 59
REGLA_BOOL           : 17 21
REGLA_CHAR           : 15 20 67 70
REGLA_DATASET        : 16
REGLA_DESV_T         : 57
REGLA_DIST_N         : 58
REGLA_ELSE           : 47
REGLA_END            : 1 2 3 4
REGLA_FLOAT          : 14 19 66 69
REGLA_FUNCION        : 7 8
REGLA_IF             : 46 47
REGLA_INT            : 13 18 65 68
REGLA_MAIN           : 1 2 3 4
REGLA_MEDIAN         : 52
REGLA_MODE           : 53
REGLA_NOT            : 29
REGLA_OR             : 31
REGLA_PIECHART       : 55
REGLA_PLOT           : 54
REGLA_PRINT          : 43
REGLA_PROGRAMA       : 1 2 3 4
REGLA_READ           : 60 61
REGLA_VAR            : 11 12
REGLA_VARIANZA       : 56
REGLA_VOID           : 8
REGLA_WHILE          : 50
RESIDUO              : 
RESTA                : 88 95
SUMA                 : 87 94
error                : 

Nonterminals, with rules where they appear

array                : 49 61 74
asignacion           : 34
bloque               : 1 2 3 4 7 8 46 47 47 50
ciclo                : 37
condicion            : 35
declaracionVar       : 11 12
escritura            : 36
escritura_aux        : 43 45
estatuto             : 84 85
estatuto_aux         : 83 85
exp                  : 22 22 23 23 24 24 25 25 26 26 27 27 28 41 42 62 63 63 81 82 87 88
expresion            : 29 30 30 31 31 32 44 45
factor               : 89 90 91
func_pred            : 38
lectura              : 39
llamada_funcion      : 33
llamada_funcion_aux  : 40 42
logical_expresion    : 46 47 48 49 50 92
modulos              : 5 6
modulos_aux          : 7 8 10
programa             : 0
programa_modulos_aux : 3 4 6
termino              : 86 87 88 90 91
tipo                 : 9 10 64
tipo_func            : 7
var_cte              : 93 94 95
var_cte_aux          : 75 82
var_id               : 64 72
vars                 : 2 4 7 8 12

Parsing method: LALR

state 0

    (0) S' -> . programa
    (1) programa -> . REGLA_PROGRAMA ID DOSPUNTOS REGLA_MAIN bloque REGLA_END
    (2) programa -> . REGLA_PROGRAMA ID DOSPUNTOS vars REGLA_MAIN bloque REGLA_END
    (3) programa -> . REGLA_PROGRAMA ID DOSPUNTOS programa_modulos_aux REGLA_MAIN bloque REGLA_END
    (4) programa -> . REGLA_PROGRAMA ID DOSPUNTOS vars programa_modulos_aux REGLA_MAIN bloque REGLA_END

    REGLA_PROGRAMA  shift and go to state 2

    programa                       shift and go to state 1

state 1

    (0) S' -> programa .



state 2

    (1) programa -> REGLA_PROGRAMA . ID DOSPUNTOS REGLA_MAIN bloque REGLA_END
    (2) programa -> REGLA_PROGRAMA . ID DOSPUNTOS vars REGLA_MAIN bloque REGLA_END
    (3) programa -> REGLA_PROGRAMA . ID DOSPUNTOS programa_modulos_aux REGLA_MAIN bloque REGLA_END
    (4) programa -> REGLA_PROGRAMA . ID DOSPUNTOS vars programa_modulos_aux REGLA_MAIN bloque REGLA_END

    ID              shift and go to state 3


state 3

    (1) programa -> REGLA_PROGRAMA ID . DOSPUNTOS REGLA_MAIN bloque REGLA_END
    (2) programa -> REGLA_PROGRAMA ID . DOSPUNTOS vars REGLA_MAIN bloque REGLA_END
    (3) programa -> REGLA_PROGRAMA ID . DOSPUNTOS programa_modulos_aux REGLA_MAIN bloque REGLA_END
    (4) programa -> REGLA_PROGRAMA ID . DOSPUNTOS vars programa_modulos_aux REGLA_MAIN bloque REGLA_END

    DOSPUNTOS       shift and go to state 4


state 4

    (1) programa -> REGLA_PROGRAMA ID DOSPUNTOS . REGLA_MAIN bloque REGLA_END
    (2) programa -> REGLA_PROGRAMA ID DOSPUNTOS . vars REGLA_MAIN bloque REGLA_END
    (3) programa -> REGLA_PROGRAMA ID DOSPUNTOS . programa_modulos_aux REGLA_MAIN bloque REGLA_END
    (4) programa -> REGLA_PROGRAMA ID DOSPUNTOS . vars programa_modulos_aux REGLA_MAIN bloque REGLA_END
    (11) vars -> . REGLA_VAR declaracionVar
    (12) vars -> . REGLA_VAR declaracionVar vars
    (5) programa_modulos_aux -> . modulos
    (6) programa_modulos_aux -> . modulos programa_modulos_aux
    (7) modulos -> . REGLA_FUNCION tipo_func ID ABREPAR modulos_aux CIERRAPAR vars bloque
    (8) modulos -> . REGLA_FUNCION REGLA_VOID ID ABREPAR modulos_aux CIERRAPAR vars bloque

    REGLA_MAIN      shift and go to state 5
    REGLA_VAR       shift and go to state 8
    REGLA_FUNCION   shift and go to state 10

    vars                           shift and go to state 6
    programa_modulos_aux           shift and go to state 7
    modulos                        shift and go to state 9

state 5

    (1) programa -> REGLA_PROGRAMA ID DOSPUNTOS REGLA_MAIN . bloque REGLA_END
    (83) bloque -> . ABRECOR estatuto_aux CIERRACOR

    ABRECOR         shift and go to state 12

    bloque                         shift and go to state 11

state 6

    (2) programa -> REGLA_PROGRAMA ID DOSPUNTOS vars . REGLA_MAIN bloque REGLA_END
    (4) programa -> REGLA_PROGRAMA ID DOSPUNTOS vars . programa_modulos_aux REGLA_MAIN bloque REGLA_END
    (5) programa_modulos_aux -> . modulos
    (6) programa_modulos_aux -> . modulos programa_modulos_aux
    (7) modulos -> . REGLA_FUNCION tipo_func ID ABREPAR modulos_aux CIERRAPAR vars bloque
    (8) modulos -> . REGLA_FUNCION REGLA_VOID ID ABREPAR modulos_aux CIERRAPAR vars bloque

    REGLA_MAIN      shift and go to state 13
    REGLA_FUNCION   shift and go to state 10

    programa_modulos_aux           shift and go to state 14
    modulos                        shift and go to state 9

state 7

    (3) programa -> REGLA_PROGRAMA ID DOSPUNTOS programa_modulos_aux . REGLA_MAIN bloque REGLA_END

    REGLA_MAIN      shift and go to state 15


state 8

    (11) vars -> REGLA_VAR . declaracionVar
    (12) vars -> REGLA_VAR . declaracionVar vars
    (64) declaracionVar -> . var_id DOSPUNTOS tipo PUNTOYCOMA
    (65) declaracionVar -> . ID ABREBRACK CTE_I CIERRABRACK DOSPUNTOS REGLA_INT PUNTOYCOMA
    (66) declaracionVar -> . ID ABREBRACK CTE_I CIERRABRACK DOSPUNTOS REGLA_FLOAT PUNTOYCOMA
    (67) declaracionVar -> . ID ABREBRACK CTE_I CIERRABRACK DOSPUNTOS REGLA_CHAR PUNTOYCOMA
    (68) declaracionVar -> . ID ABREBRACK CTE_I CIERRABRACK ABREBRACK CTE_I CIERRABRACK DOSPUNTOS REGLA_INT PUNTOYCOMA
    (69) declaracionVar -> . ID ABREBRACK CTE_I CIERRABRACK ABREBRACK CTE_I CIERRABRACK DOSPUNTOS REGLA_FLOAT PUNTOYCOMA
    (70) declaracionVar -> . ID ABREBRACK CTE_I CIERRABRACK ABREBRACK CTE_I CIERRABRACK DOSPUNTOS REGLA_CHAR PUNTOYCOMA
    (71) var_id -> . ID
    (72) var_id -> . ID COMA var_id

    ID              shift and go to state 18

    declaracionVar                 shift and go to state 16
    var_id                         shift and go to state 17

state 9

    (5) programa_modulos_aux -> modulos .
    (6) programa_modulos_aux -> modulos . programa_modulos_aux
    (5) programa_modulos_aux -> . modulos
    (6) programa_modulos_aux -> . modulos programa_modulos_aux
    (7) modulos -> . REGLA_FUNCION tipo_func ID ABREPAR modulos_aux CIERRAPAR vars bloque
    (8) modulos -> . REGLA_FUNCION REGLA_VOID ID ABREPAR modulos_aux CIERRAPAR vars bloque

    REGLA_MAIN      reduce using rule 5 (programa_modulos_aux -> modulos .)
    REGLA_FUNCION   shift and go to state 10

    modulos                        shift and go to state 9
    programa_modulos_aux           shift and go to state 19

state 10

    (7) modulos -> REGLA_FUNCION . tipo_func ID ABREPAR modulos_aux CIERRAPAR vars bloque
    (8) modulos -> REGLA_FUNCION . REGLA_VOID ID ABREPAR modulos_aux CIERRAPAR vars bloque
    (18) tipo_func -> . REGLA_INT
    (19) tipo_func -> . REGLA_FLOAT
    (20) tipo_func -> . REGLA_CHAR
    (21) tipo_func -> . REGLA_BOOL

    REGLA_VOID      shift and go to state 21
    REGLA_INT       shift and go to state 22
    REGLA_FLOAT     shift and go to state 23
    REGLA_CHAR      shift and go to state 24
    REGLA_BOOL      shift and go to state 25

    tipo_func                      shift and go to state 20

state 11

    (1) programa -> REGLA_PROGRAMA ID DOSPUNTOS REGLA_MAIN bloque . REGLA_END

    REGLA_END       shift and go to state 26


state 12

    (83) bloque -> ABRECOR . estatuto_aux CIERRACOR
    (84) estatuto_aux -> . estatuto
    (85) estatuto_aux -> . estatuto estatuto_aux
    (33) estatuto -> . llamada_funcion
    (34) estatuto -> . asignacion
    (35) estatuto -> . condicion
    (36) estatuto -> . escritura
    (37) estatuto -> . ciclo
    (38) estatuto -> . func_pred
    (39) estatuto -> . lectura
    (40) llamada_funcion -> . ID ABREPAR llamada_funcion_aux CIERRAPAR PUNTOYCOMA
    (48) asignacion -> . ID IGUAL logical_expresion PUNTOYCOMA
    (49) asignacion -> . ID array IGUAL logical_expresion PUNTOYCOMA
    (46) condicion -> . REGLA_IF ABREPAR logical_expresion CIERRAPAR bloque PUNTOYCOMA
    (47) condicion -> . REGLA_IF ABREPAR logical_expresion CIERRAPAR bloque REGLA_ELSE bloque PUNTOYCOMA
    (43) escritura -> . REGLA_PRINT ABREPAR escritura_aux CIERRAPAR PUNTOYCOMA
    (50) ciclo -> . REGLA_WHILE ABREPAR logical_expresion CIERRAPAR bloque PUNTOYCOMA
    (51) func_pred -> . REGLA_AVERAGE ABREPAR ID COMA CTE_I CIERRAPAR
    (52) func_pred -> . REGLA_MEDIAN ABREPAR ID COMA CTE_I CIERRAPAR
    (53) func_pred -> . REGLA_MODE ABREPAR ID COMA CTE_I CIERRAPAR
    (54) func_pred -> . REGLA_PLOT ABREPAR ID COMA CTE_CHAR COMA CTE_CHAR CIERRAPAR
    (55) func_pred -> . REGLA_PIECHART ABREPAR ID CIERRAPAR
    (56) func_pred -> . REGLA_VARIANZA ABREPAR ID COMA CTE_I CIERRAPAR
    (57) func_pred -> . REGLA_DESV_T ABREPAR ID COMA CTE_I CIERRAPAR
    (58) func_pred -> . REGLA_DIST_N ABREPAR ID COMA CTE_I CIERRAPAR
    (59) func_pred -> . REGLA_BASIC_V_P ABREPAR ID COMA CTE_CHAR CIERRAPAR
    (60) lectura -> . REGLA_READ ABREPAR ID CIERRAPAR PUNTOYCOMA
    (61) lectura -> . REGLA_READ ABREPAR ID array CIERRAPAR PUNTOYCOMA

    ID              shift and go to state 36
    REGLA_IF        shift and go to state 37
    REGLA_PRINT     shift and go to state 38
    REGLA_WHILE     shift and go to state 39
    REGLA_AVERAGE   shift and go to state 40
    REGLA_MEDIAN    shift and go to state 41
    REGLA_MODE      shift and go to state 42
    REGLA_PLOT      shift and go to state 43
    REGLA_PIECHART  shift and go to state 44
    REGLA_VARIANZA  shift and go to state 45
    REGLA_DESV_T    shift and go to state 46
    REGLA_DIST_N    shift and go to state 47
    REGLA_BASIC_V_P shift and go to state 48
    REGLA_READ      shift and go to state 49

    estatuto_aux                   shift and go to state 27
    estatuto                       shift and go to state 28
    llamada_funcion                shift and go to state 29
    asignacion                     shift and go to state 30
    condicion                      shift and go to state 31
    escritura                      shift and go to state 32
    ciclo                          shift and go to state 33
    func_pred                      shift and go to state 34
    lectura                        shift and go to state 35

state 13

    (2) programa -> REGLA_PROGRAMA ID DOSPUNTOS vars REGLA_MAIN . bloque REGLA_END
    (83) bloque -> . ABRECOR estatuto_aux CIERRACOR

    ABRECOR         shift and go to state 12

    bloque                         shift and go to state 50

state 14

    (4) programa -> REGLA_PROGRAMA ID DOSPUNTOS vars programa_modulos_aux . REGLA_MAIN bloque REGLA_END

    REGLA_MAIN      shift and go to state 51


state 15

    (3) programa -> REGLA_PROGRAMA ID DOSPUNTOS programa_modulos_aux REGLA_MAIN . bloque REGLA_END
    (83) bloque -> . ABRECOR estatuto_aux CIERRACOR

    ABRECOR         shift and go to state 12

    bloque                         shift and go to state 52

state 16

    (11) vars -> REGLA_VAR declaracionVar .
    (12) vars -> REGLA_VAR declaracionVar . vars
    (11) vars -> . REGLA_VAR declaracionVar
    (12) vars -> . REGLA_VAR declaracionVar vars

    REGLA_MAIN      reduce using rule 11 (vars -> REGLA_VAR declaracionVar .)
    REGLA_FUNCION   reduce using rule 11 (vars -> REGLA_VAR declaracionVar .)
    ABRECOR         reduce using rule 11 (vars -> REGLA_VAR declaracionVar .)
    REGLA_VAR       shift and go to state 8

    vars                           shift and go to state 53

state 17

    (64) declaracionVar -> var_id . DOSPUNTOS tipo PUNTOYCOMA

    DOSPUNTOS       shift and go to state 54


state 18

    (65) declaracionVar -> ID . ABREBRACK CTE_I CIERRABRACK DOSPUNTOS REGLA_INT PUNTOYCOMA
    (66) declaracionVar -> ID . ABREBRACK CTE_I CIERRABRACK DOSPUNTOS REGLA_FLOAT PUNTOYCOMA
    (67) declaracionVar -> ID . ABREBRACK CTE_I CIERRABRACK DOSPUNTOS REGLA_CHAR PUNTOYCOMA
    (68) declaracionVar -> ID . ABREBRACK CTE_I CIERRABRACK ABREBRACK CTE_I CIERRABRACK DOSPUNTOS REGLA_INT PUNTOYCOMA
    (69) declaracionVar -> ID . ABREBRACK CTE_I CIERRABRACK ABREBRACK CTE_I CIERRABRACK DOSPUNTOS REGLA_FLOAT PUNTOYCOMA
    (70) declaracionVar -> ID . ABREBRACK CTE_I CIERRABRACK ABREBRACK CTE_I CIERRABRACK DOSPUNTOS REGLA_CHAR PUNTOYCOMA
    (71) var_id -> ID .
    (72) var_id -> ID . COMA var_id

    ABREBRACK       shift and go to state 55
    DOSPUNTOS       reduce using rule 71 (var_id -> ID .)
    COMA            shift and go to state 56


state 19

    (6) programa_modulos_aux -> modulos programa_modulos_aux .

    REGLA_MAIN      reduce using rule 6 (programa_modulos_aux -> modulos programa_modulos_aux .)


state 20

    (7) modulos -> REGLA_FUNCION tipo_func . ID ABREPAR modulos_aux CIERRAPAR vars bloque

    ID              shift and go to state 57


state 21

    (8) modulos -> REGLA_FUNCION REGLA_VOID . ID ABREPAR modulos_aux CIERRAPAR vars bloque

    ID              shift and go to state 58


state 22

    (18) tipo_func -> REGLA_INT .

    ID              reduce using rule 18 (tipo_func -> REGLA_INT .)


state 23

    (19) tipo_func -> REGLA_FLOAT .

    ID              reduce using rule 19 (tipo_func -> REGLA_FLOAT .)


state 24

    (20) tipo_func -> REGLA_CHAR .

    ID              reduce using rule 20 (tipo_func -> REGLA_CHAR .)


state 25

    (21) tipo_func -> REGLA_BOOL .

    ID              reduce using rule 21 (tipo_func -> REGLA_BOOL .)


state 26

    (1) programa -> REGLA_PROGRAMA ID DOSPUNTOS REGLA_MAIN bloque REGLA_END .

    $end            reduce using rule 1 (programa -> REGLA_PROGRAMA ID DOSPUNTOS REGLA_MAIN bloque REGLA_END .)


state 27

    (83) bloque -> ABRECOR estatuto_aux . CIERRACOR

    CIERRACOR       shift and go to state 59


state 28

    (84) estatuto_aux -> estatuto .
    (85) estatuto_aux -> estatuto . estatuto_aux
    (84) estatuto_aux -> . estatuto
    (85) estatuto_aux -> . estatuto estatuto_aux
    (33) estatuto -> . llamada_funcion
    (34) estatuto -> . asignacion
    (35) estatuto -> . condicion
    (36) estatuto -> . escritura
    (37) estatuto -> . ciclo
    (38) estatuto -> . func_pred
    (39) estatuto -> . lectura
    (40) llamada_funcion -> . ID ABREPAR llamada_funcion_aux CIERRAPAR PUNTOYCOMA
    (48) asignacion -> . ID IGUAL logical_expresion PUNTOYCOMA
    (49) asignacion -> . ID array IGUAL logical_expresion PUNTOYCOMA
    (46) condicion -> . REGLA_IF ABREPAR logical_expresion CIERRAPAR bloque PUNTOYCOMA
    (47) condicion -> . REGLA_IF ABREPAR logical_expresion CIERRAPAR bloque REGLA_ELSE bloque PUNTOYCOMA
    (43) escritura -> . REGLA_PRINT ABREPAR escritura_aux CIERRAPAR PUNTOYCOMA
    (50) ciclo -> . REGLA_WHILE ABREPAR logical_expresion CIERRAPAR bloque PUNTOYCOMA
    (51) func_pred -> . REGLA_AVERAGE ABREPAR ID COMA CTE_I CIERRAPAR
    (52) func_pred -> . REGLA_MEDIAN ABREPAR ID COMA CTE_I CIERRAPAR
    (53) func_pred -> . REGLA_MODE ABREPAR ID COMA CTE_I CIERRAPAR
    (54) func_pred -> . REGLA_PLOT ABREPAR ID COMA CTE_CHAR COMA CTE_CHAR CIERRAPAR
    (55) func_pred -> . REGLA_PIECHART ABREPAR ID CIERRAPAR
    (56) func_pred -> . REGLA_VARIANZA ABREPAR ID COMA CTE_I CIERRAPAR
    (57) func_pred -> . REGLA_DESV_T ABREPAR ID COMA CTE_I CIERRAPAR
    (58) func_pred -> . REGLA_DIST_N ABREPAR ID COMA CTE_I CIERRAPAR
    (59) func_pred -> . REGLA_BASIC_V_P ABREPAR ID COMA CTE_CHAR CIERRAPAR
    (60) lectura -> . REGLA_READ ABREPAR ID CIERRAPAR PUNTOYCOMA
    (61) lectura -> . REGLA_READ ABREPAR ID array CIERRAPAR PUNTOYCOMA

    CIERRACOR       reduce using rule 84 (estatuto_aux -> estatuto .)
    ID              shift and go to state 36
    REGLA_IF        shift and go to state 37
    REGLA_PRINT     shift and go to state 38
    REGLA_WHILE     shift and go to state 39
    REGLA_AVERAGE   shift and go to state 40
    REGLA_MEDIAN    shift and go to state 41
    REGLA_MODE      shift and go to state 42
    REGLA_PLOT      shift and go to state 43
    REGLA_PIECHART  shift and go to state 44
    REGLA_VARIANZA  shift and go to state 45
    REGLA_DESV_T    shift and go to state 46
    REGLA_DIST_N    shift and go to state 47
    REGLA_BASIC_V_P shift and go to state 48
    REGLA_READ      shift and go to state 49

    estatuto                       shift and go to state 28
    estatuto_aux                   shift and go to state 60
    llamada_funcion                shift and go to state 29
    asignacion                     shift and go to state 30
    condicion                      shift and go to state 31
    escritura                      shift and go to state 32
    ciclo                          shift and go to state 33
    func_pred                      shift and go to state 34
    lectura                        shift and go to state 35

state 29

    (33) estatuto -> llamada_funcion .

    ID              reduce using rule 33 (estatuto -> llamada_funcion .)
    REGLA_IF        reduce using rule 33 (estatuto -> llamada_funcion .)
    REGLA_PRINT     reduce using rule 33 (estatuto -> llamada_funcion .)
    REGLA_WHILE     reduce using rule 33 (estatuto -> llamada_funcion .)
    REGLA_AVERAGE   reduce using rule 33 (estatuto -> llamada_funcion .)
    REGLA_MEDIAN    reduce using rule 33 (estatuto -> llamada_funcion .)
    REGLA_MODE      reduce using rule 33 (estatuto -> llamada_funcion .)
    REGLA_PLOT      reduce using rule 33 (estatuto -> llamada_funcion .)
    REGLA_PIECHART  reduce using rule 33 (estatuto -> llamada_funcion .)
    REGLA_VARIANZA  reduce using rule 33 (estatuto -> llamada_funcion .)
    REGLA_DESV_T    reduce using rule 33 (estatuto -> llamada_funcion .)
    REGLA_DIST_N    reduce using rule 33 (estatuto -> llamada_funcion .)
    REGLA_BASIC_V_P reduce using rule 33 (estatuto -> llamada_funcion .)
    REGLA_READ      reduce using rule 33 (estatuto -> llamada_funcion .)
    CIERRACOR       reduce using rule 33 (estatuto -> llamada_funcion .)


state 30

    (34) estatuto -> asignacion .

    ID              reduce using rule 34 (estatuto -> asignacion .)
    REGLA_IF        reduce using rule 34 (estatuto -> asignacion .)
    REGLA_PRINT     reduce using rule 34 (estatuto -> asignacion .)
    REGLA_WHILE     reduce using rule 34 (estatuto -> asignacion .)
    REGLA_AVERAGE   reduce using rule 34 (estatuto -> asignacion .)
    REGLA_MEDIAN    reduce using rule 34 (estatuto -> asignacion .)
    REGLA_MODE      reduce using rule 34 (estatuto -> asignacion .)
    REGLA_PLOT      reduce using rule 34 (estatuto -> asignacion .)
    REGLA_PIECHART  reduce using rule 34 (estatuto -> asignacion .)
    REGLA_VARIANZA  reduce using rule 34 (estatuto -> asignacion .)
    REGLA_DESV_T    reduce using rule 34 (estatuto -> asignacion .)
    REGLA_DIST_N    reduce using rule 34 (estatuto -> asignacion .)
    REGLA_BASIC_V_P reduce using rule 34 (estatuto -> asignacion .)
    REGLA_READ      reduce using rule 34 (estatuto -> asignacion .)
    CIERRACOR       reduce using rule 34 (estatuto -> asignacion .)


state 31

    (35) estatuto -> condicion .

    ID              reduce using rule 35 (estatuto -> condicion .)
    REGLA_IF        reduce using rule 35 (estatuto -> condicion .)
    REGLA_PRINT     reduce using rule 35 (estatuto -> condicion .)
    REGLA_WHILE     reduce using rule 35 (estatuto -> condicion .)
    REGLA_AVERAGE   reduce using rule 35 (estatuto -> condicion .)
    REGLA_MEDIAN    reduce using rule 35 (estatuto -> condicion .)
    REGLA_MODE      reduce using rule 35 (estatuto -> condicion .)
    REGLA_PLOT      reduce using rule 35 (estatuto -> condicion .)
    REGLA_PIECHART  reduce using rule 35 (estatuto -> condicion .)
    REGLA_VARIANZA  reduce using rule 35 (estatuto -> condicion .)
    REGLA_DESV_T    reduce using rule 35 (estatuto -> condicion .)
    REGLA_DIST_N    reduce using rule 35 (estatuto -> condicion .)
    REGLA_BASIC_V_P reduce using rule 35 (estatuto -> condicion .)
    REGLA_READ      reduce using rule 35 (estatuto -> condicion .)
    CIERRACOR       reduce using rule 35 (estatuto -> condicion .)


state 32

    (36) estatuto -> escritura .
